[gd_scene load_steps=5 format=3 uid="uid://dn2myx6njpjy5"]

[ext_resource type="PackedScene" uid="uid://boiifphcf1mge" path="res://scenes/enemies/abstract_enemies/stateful_enemy.tscn" id="1_sl7t0"]
[ext_resource type="Script" uid="uid://2dtm6jeegr43" path="res://scripts/utils/node2d_factory.gd" id="2_n4b4j"]
[ext_resource type="Script" uid="uid://biuwi0mtdrexp" path="res://scripts/enemies/abstracts/shootable.gd" id="2_pt6y0"]
[ext_resource type="Script" uid="uid://cuat5txuhbdg5" path="res://scripts/enemies/states/enemy_state.gd" id="5_pt6y0"]

[node name="ShootableEnemy" instance=ExtResource("1_sl7t0")]
script = ExtResource("2_pt6y0")
initial_direction = -1
shoot_time = 0.5
shoot_interval = 0.5
shoot_cooldown = 3.0
initial_state = 0
hurt_time = 0.4
awake_time = 2.0

[node name="PlayerDetectionRayCast" type="RayCast2D" parent="Direction" index="3"]
position = Vector2(0, 6)
target_position = Vector2(21, 0)
collision_mask = 4
collide_with_areas = true

[node name="BulletFactory" type="Marker2D" parent="Direction" index="4"]
position = Vector2(15, 1)
script = ExtResource("2_n4b4j")
target_container_name = &"Bullets"
metadata/_custom_type_script = "uid://2dtm6jeegr43"

[node name="ShootTimer" type="Timer" parent="." index="3"]
one_shot = true

[node name="Shoot" type="Node" parent="States" index="3"]
script = ExtResource("5_pt6y0")
metadata/_custom_type_script = "uid://cuat5txuhbdg5"
